--- a/js/package.json
+++ b/js/package.json
@@ -50,12 +50,12 @@
     "http-proxy-middleware": "^1.0.3",
     "immutable": "3.8.1",
     "js-yaml": "^3.14.0",
-    "json-bigint": "databricks/json-bigint#a1defaf9cd8dd749f0fd4d5f83a22cd846789658",
+    "json-bigint": "./vendor/json-bigint",
     "leaflet": "^1.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.24.0",
     "papaparse": "^5.3.2",
-    "plotly.js": "2.5.1",
+    "plotly.js": "2.6.4",
     "prop-types": "^15.7.2",
     "qs": "6.10.5",
     "react": "^17.0.2",
