Many Aim improvements
- introduce new schema
  we now diverge from mlflow but this is the only way to get correct
  performance in Aim UI search
- improve error handling
- query support for searching metrics
- syntax error reporting in query
- mock /apps endpoint
- don't count archived/deleted experiments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "go.testTags": "sqlcipher sqlite_unlock_notify sqlite_foreign_keys sqlite_vacuum_incr",
-    "go.buildTags": "sqlcipher sqlite_unlock_notify sqlite_foreign_keys sqlite_vacuum_incr"
+    "go.testTags": "sqlcipher sqlite_math_functions sqlite_foreign_keys sqlite_unlock_notify sqlite_vacuum_incr",
+    "go.buildTags": "sqlcipher sqlite_math_functions sqlite_foreign_keys sqlite_unlock_notify sqlite_vacuum_incr"
 }
