--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,9 @@ on:
   schedule:
     # Run daily at 01:34 so we get notified if CI is broken before a pull request
     # is submitted.
-    - cron:  '34 1 * * *'
+    - cron: "34 1 * * *"
 
 jobs:
-
   lint:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
     name: Lint
@@ -21,7 +20,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: "1.20"
 
       - name: Read build tags
         id: tags
@@ -68,7 +67,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: "1.20"
 
       - name: Mock UI builds
         run: |
@@ -93,7 +92,7 @@ jobs:
         run: |
           echo tags=$(jq -r '."go.buildTags"' .vscode/settings.json) >> $GITHUB_OUTPUT
           echo version=$(git describe --tags | sed 's/^v//') >> $GITHUB_OUTPUT
-        
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
