--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Mock UI builds
         run: |
-          mkdir pkg/ui/{aim,mlflow}/build
-          touch pkg/ui/{aim,mlflow}/build/index.html
+          mkdir pkg/ui/{aim,mlflow}/embed/build
+          touch pkg/ui/{aim,mlflow}/embed/build/index.html
 
       - name: Check with go vet
         run: go vet --tags "${{ steps.tags.outputs.tags }}" ./...
@@ -74,8 +74,8 @@ jobs:
 
       - name: Mock UI builds
         run: |
-          mkdir pkg/ui/{aim,mlflow}/build
-          touch pkg/ui/{aim,mlflow}/build/index.html
+          mkdir pkg/ui/{aim,mlflow}/embed/build
+          touch pkg/ui/{aim,mlflow}/embed/build/index.html
 
       - name: Run MLFlow integration tests
         run: ./tests/mlflow/test.sh
