Rename to FastTrackML

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,8 +3,11 @@
 .venv
 .vscode
 Dockerfile
+fml
 fasttrack
 fasttrack.db*
+fasttrackml
+fasttrackml.db*
 pkg/ui/*/embed/build*
 !pkg/ui/*/embed/build.sh
 tests/*/*.src
