--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,20 @@
 # IDE
 .idea
 
+# Binaries
 fml
 fasttrackml
+
+# Local database
 fasttrackml.db*
+
+# UI builds
 pkg/ui/*/embed/build*
 !pkg/ui/*/embed/build.sh
+
+# Imported integration tests
 tests/*/*.src
 
+# Quick start
 outputs
-
 poetry.lock
