Rename to FastTrackML (#21)
* Rename to FastTrackML
* Add comments to ignore files

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,26 @@
+# Hidden files
 .git
 .devcontainer
+.idea
 .venv
 .vscode
+
+# Our own definition
 Dockerfile
-fasttrack
-fasttrack.db*
+
+# Binaries
+fml
+fasttrackml
+
+# Local database
+fasttrackml.db*
+
+# UI builds
 pkg/ui/*/embed/build*
 !pkg/ui/*/embed/build.sh
-tests/*/*.src
+
+# Tests
+tests/
+
+# Docs
+docs/
