--- a/docs/package.json
+++ b/docs/package.json
@@ -23,7 +23,8 @@
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.43.9"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.4.1",
