--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - main
   workflow_dispatch: # Allows you to run this workflow manually from the Actions tab
+  pull_request:
 
 permissions: # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
   contents: read
