--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -4,6 +4,8 @@ on:
   push: # Runs on pushes targeting the default branch
     branches:
       - main
+    paths:
+      - 'docs/**'
   workflow_dispatch: # Allows you to run this workflow manually from the Actions tab
 
 permissions: # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
@@ -25,13 +27,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Number of commits to fetch. 0 indicates all history for all branches and tags.
-      - name: Get current version
-        id: version
-        uses: WyriHaximus/github-action-get-previous-tag@v1
-        with:
-          fallback: "X.X.X" # Optional fallback tag to use when no tag can be found
       - name: Detect package manager
         id: detect-package-manager
         working-directory: ./docs
@@ -73,8 +68,6 @@ jobs:
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build
         working-directory: ./docs
-        env:
-          CONSUL_DOT_NET_VERSION: ${{ steps.version.outputs.tag }}
         run: ${{ steps.detect-package-manager.outputs.manager }} run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
