--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
           touch pkg/ui/{aim,mlflow}/embed/build/index.html
 
       - name: Download mockery
-        run: go get github.com/vektra/mockery/v2/.../
+        run: go install github.com/vektra/mockery/v2@v2.20.0
 
       - name: Generate mocks
         run: make mocks-generate; sleep 5;
