--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -57,7 +57,9 @@ services:
       - postgres
       # - -c
       # - log_statement=all
-
+    ports:
+      - 5000:5000
 
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
-    # (Adding the "ports" property to this file will not forward from a Codespace.)
+    # (Adding the "ports" property to this file will not forward from a Codespace.). Ports
+    # section will work when running the compose file standalone.
