--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,7 +70,7 @@ jobs:
         run: make mocks-generate; sleep 5;
 
       - name: Run Golang Unit Tests
-        run: make tests-run-unit
+        run: make test-go-unit
 
   golang-integration-tests:
     name: Golang Integration Tests
