--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,10 @@ jobs:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
     name: Python Integration Tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        api: [aim, mlflow]
+      fail-fast: false
     services:
       postgres:
         image: postgres
@@ -119,8 +123,8 @@ jobs:
           mkdir pkg/ui/{aim,mlflow}/embed/build
           touch pkg/ui/{aim,mlflow}/embed/build/index.html
 
-      - name: Run MLFlow integration tests
-        run: ./tests/integration/python/mlflow/test.sh
+      - name: Run ${{ matrix.api }} integration tests
+        run: ./tests/integration/python/${{ matrix.api }}/test.sh
 
   build-image:
     if: github.event_name == 'schedule' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
