--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
         run: go install github.com/vektra/mockery/v2@v2.20.0
 
       - name: Generate mocks
-        run: make mocks-generate; sleep 5;
+        run: make mocks-generate
 
       - name: Run Golang Unit Tests
         run: make test-go-unit
