removing Detect package manager from workflow and use Yarn

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -27,29 +27,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Detect package manager
-        id: detect-package-manager
-        working-directory: ./docs
-        run: |
-          if [ -f "yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine packager manager"
-            exit 1
-          fi
-      - name: change directory
-        run: cd ./docs
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "18"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          cache: yarn
           cache-dependency-path: docs/yarn.lock
       - name: Setup Pages
         id: pages
@@ -65,10 +47,10 @@ jobs:
             ${{ runner.os }}-docusaurus-build-
       - name: Install dependencies
         working-directory: ./docs
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        run: yarn install
       - name: Build
         working-directory: ./docs
-        run: ${{ steps.detect-package-manager.outputs.manager }} run build
+        run: yarn run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
