renaming deploy-website.yml to website.yml

--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -1,4 +1,4 @@
-name: Deploy website to Pages
+name: Build and Deploy website to Pages
 
 on:
   push: # Runs on pushes targeting the default branch
