--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -5,6 +5,10 @@ on:
     paths:
       - 'website/**'
       - 'docs/**'
+  pull_request:
+    paths:
+      - 'website/**'
+      - 'docs/**'
   workflow_dispatch: # Allows you to run this workflow manually from the Actions tab
 
 permissions: # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
