--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -1,7 +1,7 @@
 name: Build and Deploy website to Pages
 
 on:
-  push: # Runs on pushes targeting any branch
+  push:
     paths:
       - 'website/**'
       - 'docs/**'
@@ -16,10 +16,6 @@ permissions: # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHu
   pages: write
   id-token: write
 
-concurrency: # Allow one concurrent run by branch
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
-  cancel-in-progress: true
-
 defaults: # Default to bash
   run:
     shell: bash
@@ -27,6 +23,7 @@ defaults: # Default to bash
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -67,6 +64,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: github.ref == 'refs/heads/main' # run only if main branch
+    concurrency: # Allow one concurrent deployment
+      group: "pages"
+      cancel-in-progress: true
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
