--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -1,9 +1,11 @@
-name: Deploy website to Pages
+name: Build and Deploy website to Pages
 
 on:
-  push: # Runs on pushes targeting the default branch
-    branches:
-      - main
+  push:
+    paths:
+      - 'website/**'
+      - 'docs/**'
+  pull_request:
     paths:
       - 'website/**'
       - 'docs/**'
@@ -14,10 +16,6 @@ permissions: # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHu
   pages: write
   id-token: write
 
-concurrency: # Allow one concurrent deployment
-  group: "pages"
-  cancel-in-progress: true
-
 defaults: # Default to bash
   run:
     shell: bash
@@ -25,6 +23,7 @@ defaults: # Default to bash
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'push' || github.event.pull_request.head.repo.id != github.event.pull_request.base.repo.id
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -53,6 +52,7 @@ jobs:
         working-directory: ./website
         run: yarn run build
       - name: Upload artifact
+        if: github.ref == 'refs/heads/main' # run only if main branch
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./website/build
@@ -63,6 +63,10 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
+    if: github.ref == 'refs/heads/main' # run only if main branch
+    concurrency: # Allow one concurrent deployment
+      group: "pages"
+      cancel-in-progress: true
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
