--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,3 +16,4 @@ updates:
     directory: "/website"
     schedule:
       interval: "weekly"
+    open-pull-requests-limit: 0 # keep only security updates and disable version updates
