--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -31,7 +31,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Set has Pages
         id: has-pages
-        run: echo ::set-output name=has_pages::$(gh api repos/${{ github.repository }} --jq .has_pages)
+        run: echo "has_pages=$(gh api repos/${{ github.repository }} --jq .has_pages)" >> $GITHUB_OUTPUT
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
