--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,11 @@ fasttrackml.db*
 
 # UI builds
 pkg/ui/*/embed/build*
+pkg/ui/*/embed/repo*
 !pkg/ui/*/embed/build.sh
 
 # Imported integration tests
-tests/*/*.src
+tests/**/*.src
 
 # Quick start
 outputs
@@ -24,3 +25,7 @@ mock_*
 
 # Misc
 .DS_Store
+ignore/
+
+# Goreleaser
+dist/
