Change to "on release" trigger

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -1,12 +1,7 @@
 name: Goreleaser
 
 on:
-  push:
-  pull_request:
-  schedule:
-    # Run daily at 01:34 so we get notified if CI is broken before a pull request
-    # is submitted.
-    - cron: "*/5 * * * *"
+  release:
 
 permissions:
   contents: read
