--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -34,7 +34,14 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+release:
+  disable: '{{ if index .Env "GH_RELEASE" }}false{{ else }}true{{ end }}'
+  github:
+    owner: '{{ .Env "GH_OWNER" }}'
+    name: '{{ .Env "GH_REPO_NAME" }}'
+    token: '{{ .Env "GH_TOKEN" }}'
 
+  
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
