--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -33,6 +33,6 @@ jobs:
           args: release --snapshot --clean
         env:  
           GH_RELEASE: true
-          GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           GH_OWNER: "suprjinx"
           GH_REPO_NAME: "fasttrackml"
