--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -37,11 +37,10 @@ changelog:
 release:
   disable: '{{ if index .Env "GH_RELEASE" }}false{{ else }}true{{ end }}'
   github:
-    owner: '{{ .Env "GH_OWNER" }}'
-    name: '{{ .Env "GH_REPO_NAME" }}'
-    token: '{{ .Env "GH_TOKEN" }}'
+    owner: '{{ if index .Env "GH_OWNER" }}{{ .Env.GH_OWNER }}{{ else }}""{{ end }}'
+    name: '{{ if index .Env "GH_REPO_NAME" }}{{ .Env.GH_REPO_NAME }}{{ else }}""{{ end }}'
 
-  
+
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
