--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
-        if: steps.has-pages.outputs.has_pages == 'true'
+        if: steps.has-pages.outputs.has_pages
       - name: Restore cache
         uses: actions/cache@v3
         with:
@@ -60,7 +60,7 @@ jobs:
         working-directory: ./website
         run: yarn run build
       - name: Upload artifact
-        if: github.ref == 'refs/heads/main' && steps.has-pages.outputs.has_pages == 'true'
+        if: github.ref == 'refs/heads/main' && steps.has-pages.outputs.has_pages
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./website/build
@@ -71,7 +71,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' && needs.build.outputs.has_pages == 'true'
+    if: github.ref == 'refs/heads/main' && needs.build.outputs.has_pages
     concurrency: # Allow one concurrent deployment
       group: "pages"
       cancel-in-progress: true
