Use goreleaser magic for artifacts

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,7 +1,12 @@
-project_name: fasttrackml
+before:
+  hooks:
+    - go mod download
+    - sh -c "docker run --rm alpine tar -C / -c tmp > tmp.tar"
 builds:
   - env:
       - CGO_ENABLED=0
+    ldflags:
+     - -s -w -X github.com/G-Research/fasttrackml/version.version={{.Version}}
     goos:
       - linux
       - windows
@@ -9,33 +14,14 @@ builds:
     goarch:
       - amd64
       - arm64
-
 archives:
-  - format: tar.gz
-    # this name template makes the OS and Arch compatible with the results of uname.
-    name_template: >-
-      {{ .ProjectName }}_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else if eq .Arch "386" }}i386
-      {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
-    # use zip for windows archives
-    format_overrides:
-    - goos: windows
-      format: zip
+  - format: binary
+dockers:
+  - image_templates:
+      - "gresearch/fasttrackml:{{ .Tag }}"
+      - "gresearch/fasttrackml:v{{ .Major }}"
+      - "gresearch/fasttrackml:v{{ .Major }}.{{ .Minor }}"
+      - "gresearch/fasttrackml:latest"
 checksum:
-  name_template: 'checksums.txt'
-snapshot:
-  name_template: "{{ incpatch .Version }}-next"
-changelog:
-  sort: asc
-  filters:
-    exclude:
-      - '^docs:'
-      - '^test:'
-
-# The lines beneath this are called `modelines`. See `:help modeline`
-# Feel free to remove those if you don't want/use them.
-# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
-# vim: set ts=2 sw=2 tw=0 fo=cnqoj
+  name_template: checksums.txt
+  algorithm: sha256
