--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,41 +62,16 @@ jobs:
           esac
           echo "tags=${tags[@]}" >> $GITHUB_OUTPUT
 
-      - name: Download artifact
-        uses: actions/github-script@v6
-        with:
-          script: |
-            let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: context.payload.workflow_run.id,
-            });
-            let matchArtifact = allArtifacts.data.artifacts.filter((artifact) => {
-              return artifact.name == "fasttrackml-oci-image"
-            })[0];
-            let download = await github.rest.actions.downloadArtifact({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               artifact_id: matchArtifact.id,
-               archive_format: 'zip',
-            });
-            let fs = require('fs');
-            fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/fasttrackml-oci-image.zip`, Buffer.from(download.data));
-
-      - name: Unzip artifact
-        run: unzip fasttrackml-oci-image.zip
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Push to Docker Hub
-        run: |
-          for tag in ${{ steps.tags.outputs.tags }}
-          do
-            echo "::group::Pushing image to ${{ vars.DOCKER_REPO }}:$tag"
-            skopeo copy --all oci-archive:fasttrackml-oci.tar:${{ github.event.workflow_run.head_branch }} docker://${{ vars.DOCKER_REPO }}:$tag
-            echo "::endgroup::"
-          done
+      - name: Run goreleaser
+        uses: goreleaser/goreleaser-action@v1
+        with:
+          version: v1.19.1
+          args: release --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
