--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,11 +13,38 @@ jobs:
     name: Publish container image to DockerHub
     runs-on: ubuntu-latest
     environment: release
+    if: github.event.workflow_run.event == 'push' && github.event.workflow_run.conclusion == 'success' # && !github.event.repository.fork
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      # The given ref should belong to the main branch.
+      # If it's main, it shouldn't be more than 2 commits away (in case another push happened in the meantime).
+      # If it starts with 'v', it should be a tag and belong to the main branch.
+      # Anything else is invalid.
+      - name: Validate ref
+        run: |
+          ref=${{ github.event.workflow_run.head_branch }}
+          sha=${{ github.event.workflow_run.head_sha }}
+          case $ref in
+            main)
+              [ $(git branch --contains=$sha main | wc -l) -eq 1 ] &&
+              [ $(git rev-list --count $sha..main) -le 2 ]
+              ;;
+            v?*)
+              [ $(git rev-parse refs/tags/$ref) == $sha ] &&
+              [ $(git branch --contains=$sha main | wc -l) -eq 1 ]
+              ;;
+            *)
+              false
+              ;;
+          esac
+          if [ $? -ne 0 ]; then
+            echo "::error ::Invalid ref $ref $sha"
+            exit 1
+          fi
 
       - name: Compute tags
         id: tags
